tried to add bg image

--- a/public_html/documentation/styles.css
+++ b/public_html/documentation/styles.css
@@ -1,10 +1,4 @@
 
-/**
-*#firstImpression {
+#backgroundImage {
 	background-image: url("Placeholder.jpg");
-}
- */
-
-.jumbotron {
-	background-color: lime;
 }
