added about me box

--- a/public_html/documentation/styles.css
+++ b/public_html/documentation/styles.css
@@ -37,3 +37,12 @@ header,
 	}
 }
 
+.navbar-brand {
+	display: inline-block;
+	padding-top: .3125rem;
+	padding-bottom: .3125rem;
+	margin-right: 1rem;
+	font-size: 3rem;
+	line-height: inherit;
+	white-space: nowrap;
+}
