--- a/public_html/documentation/styles.css
+++ b/public_html/documentation/styles.css
@@ -33,7 +33,7 @@ header,
 
 @media (max-width: 991px) {
 	.navbar:not(.top-nav-collapse) {
-		background: rgba(69, 18, 75, 1) !important;
+		background: rgb(69, 18, 75) !important;
 	}
 }
 
@@ -67,7 +67,7 @@ Contact Form
 	border: none;
 	border-radius: 1rem;
 	padding: 1.5%;
-	background: #de0506;
+	background: #02ccd6;
 	font-weight: 600;
 	color: #fff;
 	cursor: pointer;
@@ -86,9 +86,17 @@ Contact Form
 
 /*     Background colors      */
 #aboutMe {
-	background-color: #420c66;
+	background-color: #424242;
 }
 
 .links {
 	color: #f5f5f5;
+}
+
+.navbar-toggler {
+	color: lime;
+}
+
+#skills {
+	background-color: #02ccd6;
 }
