--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -13,12 +13,12 @@ header,
 }
 
 
-#backgroundImage {
+/*#backgroundImage {
 	background-image: url("http://www.hutterites.org/wp-content/uploads/2012/03/placeholder.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-}
+}*/
 
 @media (max-width: 740px) {
 	html,
@@ -46,8 +46,6 @@ header,
 /*                    Contact Form                           */
 .contact-form{
 	background: #dadfe1;
-	/*margin-top: 10%;
-	margin-bottom: 5%;*/
 	width: 70%;
 }
 .contact-form .form-control{
@@ -122,8 +120,306 @@ p, h3, h5 {
 }
 
 
-canvas {
+/*canvas {
 	width: 110%;
+}*/
+
+@import 'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900';
+.glitchContainer {
+	height: 100vh;
+	background: black;
+	display: grid;
+/*	place-items: center;*/
+	justify-content: center;
+	font-size: .5em;
+}
+.glitchContainer .glitch {
+	color: #fff;
+	font-size: 10em;
+	position: relative;
+	font-family: 'Roboto';
+	font-weight: 700;
+}
+.glitchContainer .glitch::before,
+.glitchContainer .glitch::after {
+	content: 'Web Developer';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	overflow: hidden;
+	background-color: black;
+	color: #fff;
+}
+.glitchContainer .glitch::before {
+	left: 8px;
+	text-shadow: 2px 0 #00ffea;
+	animation: glitch 4s infinite linear;
+}
+.glitchContainer .glitch::after {
+	left: 8px;
+	text-shadow: -2px 0 #fe3a7f;
+	animation: glitch 8s infinite linear;
+}
+@-moz-keyframes glitch {
+	0% {
+		clip: rect(16px, 9999px, 77px, 0);
+	}
+	5% {
+		clip: rect(29px, 9999px, 12px, 0);
+	}
+	10% {
+		clip: rect(11px, 9999px, 53px, 0);
+	}
+	15% {
+		clip: rect(100px, 9999px, 92px, 0);
+	}
+	20% {
+		clip: rect(26px, 9999px, 60px, 0);
+	}
+	25% {
+		clip: rect(82px, 9999px, 73px, 0);
+	}
+	30% {
+		clip: rect(8px, 9999px, 47px, 0);
+	}
+	35% {
+		clip: rect(18px, 9999px, 96px, 0);
+	}
+	40% {
+		clip: rect(23px, 9999px, 47px, 0);
+	}
+	45% {
+		clip: rect(97px, 9999px, 41px, 0);
+	}
+	50% {
+		clip: rect(28px, 9999px, 64px, 0);
+	}
+	55% {
+		clip: rect(99px, 9999px, 24px, 0);
+	}
+	60% {
+		clip: rect(68px, 9999px, 45px, 0);
+	}
+	65% {
+		clip: rect(46px, 9999px, 70px, 0);
+	}
+	70% {
+		clip: rect(42px, 9999px, 39px, 0);
+	}
+	75% {
+		clip: rect(63px, 9999px, 59px, 0);
+	}
+	80% {
+		clip: rect(29px, 9999px, 51px, 0);
+	}
+	85% {
+		clip: rect(59px, 9999px, 47px, 0);
+	}
+	90% {
+		clip: rect(97px, 9999px, 30px, 0);
+	}
+	95% {
+		clip: rect(56px, 9999px, 94px, 0);
+	}
+	100% {
+		clip: rect(34px, 9999px, 92px, 0);
+	}
+}
+@-webkit-keyframes glitch {
+	0% {
+		clip: rect(16px, 9999px, 77px, 0);
+	}
+	5% {
+		clip: rect(29px, 9999px, 12px, 0);
+	}
+	10% {
+		clip: rect(11px, 9999px, 53px, 0);
+	}
+	15% {
+		clip: rect(100px, 9999px, 92px, 0);
+	}
+	20% {
+		clip: rect(26px, 9999px, 60px, 0);
+	}
+	25% {
+		clip: rect(82px, 9999px, 73px, 0);
+	}
+	30% {
+		clip: rect(8px, 9999px, 47px, 0);
+	}
+	35% {
+		clip: rect(18px, 9999px, 96px, 0);
+	}
+	40% {
+		clip: rect(23px, 9999px, 47px, 0);
+	}
+	45% {
+		clip: rect(97px, 9999px, 41px, 0);
+	}
+	50% {
+		clip: rect(28px, 9999px, 64px, 0);
+	}
+	55% {
+		clip: rect(99px, 9999px, 24px, 0);
+	}
+	60% {
+		clip: rect(68px, 9999px, 45px, 0);
+	}
+	65% {
+		clip: rect(46px, 9999px, 70px, 0);
+	}
+	70% {
+		clip: rect(42px, 9999px, 39px, 0);
+	}
+	75% {
+		clip: rect(63px, 9999px, 59px, 0);
+	}
+	80% {
+		clip: rect(29px, 9999px, 51px, 0);
+	}
+	85% {
+		clip: rect(59px, 9999px, 47px, 0);
+	}
+	90% {
+		clip: rect(97px, 9999px, 30px, 0);
+	}
+	95% {
+		clip: rect(56px, 9999px, 94px, 0);
+	}
+	100% {
+		clip: rect(34px, 9999px, 92px, 0);
+	}
+}
+@-o-keyframes glitch {
+	0% {
+		clip: rect(16px, 9999px, 77px, 0);
+	}
+	5% {
+		clip: rect(29px, 9999px, 12px, 0);
+	}
+	10% {
+		clip: rect(11px, 9999px, 53px, 0);
+	}
+	15% {
+		clip: rect(100px, 9999px, 92px, 0);
+	}
+	20% {
+		clip: rect(26px, 9999px, 60px, 0);
+	}
+	25% {
+		clip: rect(82px, 9999px, 73px, 0);
+	}
+	30% {
+		clip: rect(8px, 9999px, 47px, 0);
+	}
+	35% {
+		clip: rect(18px, 9999px, 96px, 0);
+	}
+	40% {
+		clip: rect(23px, 9999px, 47px, 0);
+	}
+	45% {
+		clip: rect(97px, 9999px, 41px, 0);
+	}
+	50% {
+		clip: rect(28px, 9999px, 64px, 0);
+	}
+	55% {
+		clip: rect(99px, 9999px, 24px, 0);
+	}
+	60% {
+		clip: rect(68px, 9999px, 45px, 0);
+	}
+	65% {
+		clip: rect(46px, 9999px, 70px, 0);
+	}
+	70% {
+		clip: rect(42px, 9999px, 39px, 0);
+	}
+	75% {
+		clip: rect(63px, 9999px, 59px, 0);
+	}
+	80% {
+		clip: rect(29px, 9999px, 51px, 0);
+	}
+	85% {
+		clip: rect(59px, 9999px, 47px, 0);
+	}
+	90% {
+		clip: rect(97px, 9999px, 30px, 0);
+	}
+	95% {
+		clip: rect(56px, 9999px, 94px, 0);
+	}
+	100% {
+		clip: rect(34px, 9999px, 92px, 0);
+	}
+}
+@keyframes glitch {
+	0% {
+		clip: rect(16px, 9999px, 77px, 0);
+	}
+	5% {
+		clip: rect(29px, 9999px, 12px, 0);
+	}
+	10% {
+		clip: rect(11px, 9999px, 53px, 0);
+	}
+	15% {
+		clip: rect(100px, 9999px, 92px, 0);
+	}
+	20% {
+		clip: rect(26px, 9999px, 60px, 0);
+	}
+	25% {
+		clip: rect(82px, 9999px, 73px, 0);
+	}
+	30% {
+		clip: rect(8px, 9999px, 47px, 0);
+	}
+	35% {
+		clip: rect(18px, 9999px, 96px, 0);
+	}
+	40% {
+		clip: rect(23px, 9999px, 47px, 0);
+	}
+	45% {
+		clip: rect(97px, 9999px, 41px, 0);
+	}
+	50% {
+		clip: rect(28px, 9999px, 64px, 0);
+	}
+	55% {
+		clip: rect(99px, 9999px, 24px, 0);
+	}
+	60% {
+		clip: rect(68px, 9999px, 45px, 0);
+	}
+	65% {
+		clip: rect(46px, 9999px, 70px, 0);
+	}
+	70% {
+		clip: rect(42px, 9999px, 39px, 0);
+	}
+	75% {
+		clip: rect(63px, 9999px, 59px, 0);
+	}
+	80% {
+		clip: rect(29px, 9999px, 51px, 0);
+	}
+	85% {
+		clip: rect(59px, 9999px, 47px, 0);
+	}
+	90% {
+		clip: rect(97px, 9999px, 30px, 0);
+	}
+	95% {
+		clip: rect(56px, 9999px, 94px, 0);
+	}
+	100% {
+		clip: rect(34px, 9999px, 92px, 0);
+	}
 }
 
 
