got view bg working

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -13,7 +13,7 @@ header,
 }
 
 #backgroundImage {
-	background-image: url("/public_html/images/whyteGif.gif");
+	background-image: url("../images/whyteGif.gif");
 }
 
 #bigName {
