--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -14,13 +14,19 @@ header,
 
 #backgroundImage {
 	background-image: url("../images/whyteGif.gif");
+	/*position: fixed;*/
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
 }
 
 #bigName {
 	justify-content: center;
 	align-content: center;
 	padding-left: 1rem;
-	padding-top: 25rem;
+	padding-top: 25em;
 }
 
 
